# cpp-net-framework

./: .appyeyor.yml  .clang-format  .gitignore  .travis.yml  ABOUT.txt  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE.TXT  README.md  appveyor.yml  index.html  params.json
config/: .gitignore  travisci_rsa.enc  travisci_rsa.pub
doc/html/: annotated.html  annotated.js  classes.html  dir_0219ab3ddb2b0bf25e0582a499228fd4.html  dir_0219ab3ddb2b0bf25e0582a499228fd4.js  dir_0219ab3ddb2b0bf25e0582a499228fd4_dep.map  dir_0219ab3ddb2b0bf25e0582a499228fd4_dep.md5  dir_33b2cc28955b1fbc16c51e5016c9353f.html  dir_33b2cc28955b1fbc16c51e5016c9353f.js  dir_33b2cc28955b1fbc16c51e5016c9353f_dep.map  dir_33b2cc28955b1fbc16c51e5016c9353f_dep.md5  dir_55c2ce0c1a0c70bff4e609443701bb1c.html  dir_55c2ce0c1a0c70bff4e609443701bb1c.js  dir_55c2ce0c1a0c70bff4e609443701bb1c_dep.map  dir_55c2ce0c1a0c70bff4e609443701bb1c_dep.md5  dir_727fbdeb91f3513b123941eceadbc9db.html  dir_727fbdeb91f3513b123941eceadbc9db.js  dir_727fbdeb91f3513b123941eceadbc9db_dep.map  dir_727fbdeb91f3513b123941eceadbc9db_dep.md5  dir_81526cd16b525fdf7f06bf9cdc423904.html  dir_81526cd16b525fdf7f06bf9cdc423904.js  dir_81526cd16b525fdf7f06bf9cdc423904_dep.map  dir_81526cd16b525fdf7f06bf9cdc423904_dep.md5  dir_9f7c449f23c51a800ac3cfcfad09eda5.html  dir_9f7c449f23c51a800ac3cfcfad09eda5.js  dir_9f7c449f23c51a800ac3cfcfad09eda5_dep.map  dir_9f7c449f23c51a800ac3cfcfad09eda5_dep.md5  dir_d683966c98f958558965a5a97fa4693f.html  dir_d683966c98f958558965a5a97fa4693f.js  dir_d683966c98f958558965a5a97fa4693f_dep.map  dir_d683966c98f958558965a5a97fa4693f_dep.md5  files.html  files.js  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  (+46 more)
doc/html/d0/da4/: class_system_1_1_environment.html
doc/html/d0/db2/: _i_o_8h_source.html
doc/html/d0/ddf/: class_system_1_1_system_exception__inherit__graph.map  class_system_1_1_system_exception__inherit__graph.md5
doc/html/d1/d32/: class_system_1_1_directory.html
doc/html/d1/d39/: class_system_1_1_system_exception__coll__graph.map  class_system_1_1_system_exception__coll__graph.md5
doc/html/d1/d3e/: class_system_1_1_array.html  class_system_1_1_array.js
doc/html/d1/d48/: class_system_1_1_xml_1_1_xml_document.html  class_system_1_1_xml_1_1_xml_document.js
doc/html/d1/d99/: class_system_1_1_not_implemented_exception__coll__graph.map
doc/html/d1/de4/: class_xml_document.html  class_xml_document.js
doc/html/d1/de9/: class_system_1_1_char.html
doc/html/d1/ded/: class_system_1_1_array_list.html  class_system_1_1_array_list.js
doc/html/d1/df8/: class_system_1_1_exception.html  class_system_1_1_exception.js
doc/html/d2/db9/: _array_list_8h_source.html
doc/html/d2/de7/: _dictionary_8h_source.html
doc/html/d2/dfc/: _hash_set_8h_source.html
doc/html/d3/d57/: class_system_1_1_xml_1_1_xml_node__inherit__graph.map  class_system_1_1_xml_1_1_xml_node__inherit__graph.md5
doc/html/d3/d60/: class_system_1_1_string__inherit__graph.map  class_system_1_1_string__inherit__graph.md5
doc/html/d3/d64/: class_system_1_1_not_implemented_exception__inherit__graph.md5
doc/html/d3/d6e/: _console_8h_source.html
doc/html/d3/dbe/: _system_8_compiler_8h_source.html
doc/html/d3/dc5/: _array_8h_source.html
doc/html/d3/df9/: class_system_1_1_collections_1_1_generic_1_1_dictionary.html  class_system_1_1_collections_1_1_generic_1_1_dictionary.js
doc/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_c.js  classes_e.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+9 more)
docs/: Classes.md
scripts/: CMakeLists.txt  finish_coverage.sh  generate_coverage.sh  install_coverage.sh  install_coversage.sh  publish_doxygen.sh  push_doxygen.sh
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/CSharpToCpp/: CMakeLists.txt  driver.cxx  main.cxx
src/examples/FileIo/: CMakeLists.txt  driver.cxx  main.cxx  main.h
src/examples/GTest2Html/: CMakeLists.txt  driver.cxx  gtest_out.txt  main.cxx  main.h
src/examples/HelloWorld/: CMakeLists.txt  driver.cxx  main.cxx
src/framework/: CMakeLists.txt  Char.h  Console.h  DateTime.h  Environment.h  Exception.h  NetString.h  NullPtr.h  OS.h  Path.cxx  Path.h  System.Collections.Generic.h  System.Compiler.h  System.IO.h  System.cxx  System.h  TimeSpan.h  pragmas.h
src/framework/System/: Array.h  ArrayList.h  Console.h  DateTime.h  Environment.h  Exception.h  IO.h  Linq.h  Math.h  Net.h  Object.cxx  Object.h  Reflection.h  String.cxx  String.h  StringBuilder.h  Text.h  Xml.h
src/framework/System/Collections/: Generic.h  ICollection.h
src/framework/System/Collections/Generic/: Dictionary.h  HashSet.h  List.h
src/framework/System/IO/: Directory.cxx  Directory.h  File.cxx  File.h  FileInfo.cxx  FileInfo.h  FileNotFoundException.h  FileSystemInfo.cxx  FileSystemInfo.h  StreamReader.cxx  StreamReader.h  StreamWriter.h
src/framework/System/Net/: WebClient.h
src/googletest/: CMakeLists.txt
src/googletest/docs/: AdvancedGuide.md  DevGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_5_Primer.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_6_PumpManual.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md  V1_7_Samples.md
src/googletest/test/: gtest_output_test.py  gtest_output_test_golden_lin.txt  gtest_test_utils.py  gtest_unittest.cc
src/unittests/: ArrayList_Test.cxx  CMakeLists.txt  DateTime_Test.cxx  Dictionary_Test.cxx  Directory_Test.cxx  Exception_Test.cxx  FileInfo_Test.cxx  HashSet_Test.cxx  Internals_Test.cxx  List_Test.cxx  Math_Test.cxx  Stream_Test.cxx  StringBuilder_Test.cxx  String_Test.cxx  WebClient_Test.cxx  Xml_Test.cxx
(+115 files in other folders)
